# WinIsland

./: Cargo.toml  DEVELOPMENT.md  README.md  build.rs
Page/: index.md
Page/.vitepress/: config.mts
Page/zh/: download.md  getting-started.md  guide.md  index.md
src/: main.rs
src/core/: audio.rs  config.rs  i18n.rs  mod.rs  persistence.rs  render.rs  smtc.rs
src/icons/: arrows.rs  mod.rs  music.rs  settings.rs
src/ui/: mod.rs
src/ui/expanded/: main_view.rs  mod.rs  tools_view.rs
src/utils/: autostart.rs  blur.rs  color.rs  mod.rs  mouse.rs  physics.rs  screen.rs
src/window/: app.rs  mod.rs  music_settings.rs  settings.rs  tray.rs
