[package]
name = "WinIsland"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = "1.25.0"
skia-safe = "0.93.1"
softbuffer = "0.4.8"
tokio = { version = "1.49.0", features = ["rt", "time", "macros"] }
tray-icon = "0.19"
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_System_Registry", "Win32_UI_WindowsAndMessaging", "Win32_System_Threading", "Win32_Graphics_Gdi"] }
winit = "0.30"
